@@ -389,3 +389,5 @@
 	man page.
 2019-04-18 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.7.1.
+2019-04-19 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a memory leak in glassplayer(1).
